# ser-std

./: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  text-error.md
blinky/: Cargo.toml  diagram.json  wokwi.toml
blinky/src/: main.rs
button-press-counter/: Cargo.toml  diagram.json  wokwi.toml
button-press-counter/src/: main.rs
connecting-wifi/: Cargo.toml  wokwi.toml
connecting-wifi/src/: main.rs
i2c-real-time-clock/: Cargo.toml  diagram.json  wokwi.toml
i2c-real-time-clock/src/: main.rs
led-bar-blink/: Cargo.toml  diagram.json  wokwi.toml
led-bar-blink/src/: main.rs
led-fading/: Cargo.toml  diagram.json  wokwi.toml
led-fading/src/: main.rs
pulse-duration-monitor/: Cargo.toml  diagram.json  wokwi.toml
pulse-duration-monitor/src/: main.rs
real-time-timer/: Cargo.toml  wokwi.toml
real-time-timer/.cargo/: config.toml
real-time-timer/src/: main.rs
simple-http-client/: Cargo.toml  wokwi.toml
simple-http-client/src/: main.rs
simple-http-server/: Cargo.toml  diagram.json  wokwi.toml
simple-http-server/src/: main.rs
simple-voltmeter/: Cargo.toml  diagram.json  wokwi.toml
simple-voltmeter/src/: main.rs
synchronizing-system-time/: Cargo.toml  wokwi.toml
synchronizing-system-time/.cargo/: config.toml
synchronizing-system-time/src/: main.rs
temperature-sensing/: Cargo.toml  diagram.json  wokwi.toml
temperature-sensing/src/: main.rs
uart-xor-cipher/: Cargo.toml  diagram.json  wokwi.toml
uart-xor-cipher/src/: main.rs
